[package]
name = "multipass"
version = "0.1.0"
edition = "2021"
description = "SpookyID: Multipass - Core Cryptography & Identity Library"

[dependencies]
# Native BLS12-381
bls12_381 = "0.8"
blst = "0.3"
ff = "0.13"
group = "0.13"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
rand_chacha = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
x509-parser = "0.15"
p256 = { version = "0.13", features = ["ecdsa", "pem", "std"] }
signature = "2.2"
hkdf = "0.12"
hmac = "0.12"
uuid = { version = "1.0", features = ["v4"] }
ciborium = "0.2"

# Removed: axum, tokio (full), tower-http, sqlx (server dependencies)
